--- a/images/ubuntu_24_04_packages.yaml
+++ b/images/ubuntu_24_04_packages.yaml
@@ -45,3 +45,4 @@ packages:
   - "build-essential" # commit annotator (Bazel / Bazelisk)
   - "clang-20" # partial IC build process run by target-determinator in commit annotator
   - "libffi-dev" # necessary to build the IC just like clang
+  - "libsystemd-dev"
