chore: disabling large tests

--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -315,12 +315,13 @@ small_tests_deps = ["forum", "publish_notes", "release_index", "release_index_lo
             "deps": small_tests_deps + medium_tests_deps,
             "test_size": "medium",
         },
-        {
-            "targets": large_tests,
-            "data": [],
-            "deps": large_tests_deps,
-            "test_size": "large",
-        },
+        # Temporary disable large test because they are timing out
+        # {
+        #     "targets": large_tests,
+        #     "data": [],
+        #     "deps": large_tests_deps,
+        #     "test_size": "large",
+        # },
     ]
 ]
 
