feat: moving some bazel jobs to namespace runners

--- a/.github/workflows/trusted-neurons-alerts.yaml
+++ b/.github/workflows/trusted-neurons-alerts.yaml
@@ -30,7 +30,7 @@ jobs:
   bazel-trusted-neurons-alerts:
     name: Trusted neurons alerts pipeline
     runs-on:
-      labels: dre-runner-custom
+      labels: namespace-profile-default
     # This image is based on ubuntu:20.04
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
     permissions:
