--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -11,7 +11,7 @@ concurrency:
 jobs:
   test:
     runs-on:
-      labels: dre-runner-custom
+      labels: namespace-profile-default
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
     steps:
       - uses: actions/checkout@v4
