--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,8 +28,7 @@ concurrency:
 jobs:
   bazel:
     name: Build and test pipeline
-    runs-on:
-      labels: namespace-profile-default
+    runs-on: namespace-profile-default
     # This image is based on ubuntu:20.04
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
     permissions:
