--- a/release-index.yaml
+++ b/release-index.yaml
@@ -16,6 +16,8 @@ releases:
     versions:
       - name: base
         version: 007c473c9c7fc820c49eea5c823cdd4b9404119d
+      - name: hotfix-007c473c
+        version: a62fbc67241a576ca7cf42ffe7cb84b078618ad1
   - rc_name: rc--2026-02-12_20-24
     versions:
       - name: base
